examples/terraform-aws-ec2-docker-image/ec2securitygroup.tf
# Create a security group
resource "aws_security_group" "docker_sg" {
  name        = "docker-sg"
  description = "Security group for Docker EC2 instance"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  # Add any additional ingress rules as needed

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
   tags = {
    Name = "docker-newsletter-image"
  }

}
